--- a/build.xml
+++ b/build.xml
@@ -435,7 +435,7 @@
     download.latest.deliverytools.from.hudson, undeploy.deliverytools, deploy.deliverytools, load.seed.data, reload.national"/>
 
     <target name="init" depends="setup, drop.national.db, load.openmrs.schema, openmrs.quartz,
-    deploy.reports, download.openmrs, undeploy.openmrs, deploy.openmrs, deploy.idgen.omod, download.latest.national.from.hudson, download.latest.testapp.from.hudson, merge.test.app.to.national.app,
+    download.openmrs, undeploy.openmrs, deploy.openmrs, deploy.reports, deploy.idgen.omod, download.latest.national.from.hudson, download.latest.testapp.from.hudson, merge.test.app.to.national.app,
     undeploy.national, deploy.national, download.latest.deliverytools.from.hudson, undeploy.deliverytools, deploy.deliverytools, openmrs.deltas, load.seed.data, reload.national"/>
 
     <target name="deploy.latest"
