--- a/build.xml
+++ b/build.xml
@@ -227,6 +227,14 @@
         <echo message="creation of ${mysql.quartz.db.name} db successful."/>
     </target>
 
+    <target name="aggregator.setup">
+        <sql driver="${mysql.driver}" url="jdbc:mysql://${mysql.server}:${mysql.port}?autoReconnect=true" userid="${mysql.user}" classpathref="mysql.classpath" password="${mysql.password}">
+            <fileset dir="${basedir}/artifacts/sql/ghana">
+                <include name="aggregator_database_and_tables.sql"/>
+            </fileset>
+        </sql>
+    </target>
+
     <target name="openmrs.deltas">
         <unzip dest="${download.dir}/${app.name}"
                src="${download.dir}/${app.name}.war">
