--- a/build.xml
+++ b/build.xml
@@ -189,7 +189,7 @@
         </sql>
     </target>
 
-    <target name="openmrs.db.create">
+    <target name="openmrs.db.create" depends="download.latest.national.from.hudson">
         <!-- drop existing schema -->
         <sql driver="${mysql.driver}"
              url="jdbc:mysql://${mysql.server}:${mysql.port}?autoReconnect=true"
@@ -204,10 +204,6 @@
             '${mysql.openmrs.password}';
             flush privileges;
         </sql>
-    </target>
-
-    <target name="openmrs.db.deltas" depends="download.latest.national.from.hudson">
-        <!-- run changelog -->
         <unzip dest="${download.dir}/${app.name}"
                src="${download.dir}/${app.name}.war">
         </unzip>
@@ -215,6 +211,16 @@
         <move todir="../build">
             <fileset dir="${download.dir}/${app.name}/build"/>
         </move>
+        <sql driver="${mysql.driver}" url="jdbc:mysql://${mysql.server}:${mysql.port}/${mysql.openmrs.db.name}?autoReconnect=true" userid="${mysql.user}" classpathref="mysql.classpath"
+             password="${mysql.password}">
+            <fileset dir="../build/sql">
+                <include name="0.openmrs-1.8.sql"/>
+            </fileset>
+        </sql>
+    </target>
+
+    <target name="openmrs.db.deltas">
+        <!-- run changelog -->
         <path id="dependencies">
             <fileset dir="./lib/" includes="*.jar"/>
         </path>
