--- a/build.xml
+++ b/build.xml
@@ -303,7 +303,7 @@
             <classpath>
                 <path location="${tomcat.home}/webapps/${app.name}/WEB-INF/classes"/>
                 <path refid="lib.path"/>
-                <path location="${download.dir}/${ghana.national.tools.name}"/>
+                <path location="${download.dir}"/>
             </classpath>
         </java>
         <echo message="Schedule data loaded into ${couchdb.national.db} database"/>
@@ -368,7 +368,14 @@
         <copy file="${download.dir}/idgen-omod.omod" tofile="${openmrs.directory}/modules/idgen-omod.omod"/>
     </target>
 
-    <target name="openmrs.data.migrate" depends="openmrs.db.migrate, openmrs.db.deltas"/>
+    <target name="openmrs.data.migrate" depends="openmrs.db.migrate, openmrs.db.deltas">
+        <sql driver="${mysql.driver}" url="jdbc:mysql://${mysql.server}:${mysql.port}/${mysql.openmrs.db.name}?autoReconnect=true" userid="${mysql.user}" classpathref="mysql.classpath"
+             password="${mysql.password}">
+            <fileset dir="${basedir}/artifacts/sql/ghana">
+                <include name="reset_admin_password.sql"/>
+            </fileset>
+        </sql>
+    </target>
     <target name="openmrs.db.setup" depends="openmrs.db.create, openmrs.db.deltas"/>
     <target name="redeploy.openmrs" depends="openmrs.omod.setup, deploy.reports, undeploy.openmrs, deploy.openmrs"/>
     <target name="redeploy.ghana.national" depends="download.latest.national.from.hudson, download.latest.testapp.from.hudson, merge.test.app.to.national.app, undeploy.national, deploy.national, load.seed.data"/>
