--- a/build.xml
+++ b/build.xml
@@ -218,7 +218,7 @@
         </sql>
     </target>
 
-    <target name="openmrs.db.deltas">
+    <target name="openmrs.db.deltas" depends="download.latest.national.from.hudson">
         <!-- run changelog -->
         <path id="dependencies">
             <fileset dir="./lib/" includes="*.jar"/>
